# stocker

./: .gitignore  README  README.md  Stock.py  StockList.py  api.py  clean.py  db.py  db_connection.py  next.md  pyproject.toml  scrape.py
funcs/: db.py  db_connection.py  decorators.py  time_helpers.py
